# perseus

./: .gitignore  Cargo.toml  todo.md
.planning/: PROJECT.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-ROADMAP.md
.planning/phases/01-foundation/: 1-1-PLAN.md  1-1-SUMMARY.md
.planning/phases/02-tui-layout/: 2-1-PLAN.md  2-1-SUMMARY.md
.planning/phases/03-http-integration/: 3-1-PLAN.md  3-1-SUMMARY.md
.planning/phases/04-polish/: 4-1-PLAN.md  4-1-SUMMARY.md
.planning/phases/05-ui-improvements/: 5-1-PLAN.md  5-1-SUMMARY.md
.planning/phases/06-persistence/: 6-1-PLAN.md  6-1-SUMMARY.md
.planning/phases/06.1-layout-overhaul/: 06.1-01-PLAN.md  CONTEXT.md  (+1 more)
.serena/: project.yml
docs/: authentication.md  configuration.md  environment-variables.md  persistence-decisions.md  request-body-types.md  sample-config.toml
docs/brainstorms/: 2026-02-15-production-ready-features-brainstorm.md
docs/plans/: 2026-02-15-feat-additional-http-methods-plan.md  2026-02-15-feat-authentication-support-plan.md  2026-02-15-feat-configuration-file-plan.md  2026-02-15-feat-environment-variables-plan.md  2026-02-16-feat-query-parameter-editor-plan.md  2026-02-16-feat-request-body-types-plan.md
src/: app.rs  clipboard.rs  config.rs  http.rs  main.rs  perf.rs  vim.rs
src/storage/: collection.rs  environment.rs  io.rs  migrate.rs  mod.rs  models.rs  postman.rs  project.rs  session_state.rs  ui_state.rs
src/ui/: layout.rs  mod.rs  widgets.rs
(+2 files in other folders)
