[package]
name = "perseus"
version = "1.0.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.1"
tui-textarea = { version = "0.7", features = ["crossterm"] }
arboard = "3.4"
uuid = { version = "1", features = ["v4", "serde"] }

[features]
perf = []
